fix spacing on nav

--- a/app/styles/nav.scss
+++ b/app/styles/nav.scss
@@ -99,7 +99,7 @@ nav .hamburger:hover {
 
 
 #collections-nav > .nav-item-group > a {
-    margin: 0 4px;
+    margin: 0 15px;
 }
 
 #collections-nav > .nav-item-group > a:last-child {
@@ -111,6 +111,8 @@ nav .hamburger:hover {
 #osf-nav > .local-nav > .dropdown-content > a:hover {
     color: #ccc;
 }
+
+
 nav {
     display: flex !important;
     z-index: 100;
@@ -418,7 +420,7 @@ body {
     }
     :before {
         content:">";
-        padding-right: 12px;
+        padding-right: 24px;
         font-weight: 600;
     }
     :first-child:before {
